--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,13 +39,18 @@ dependencies:
   flutter_config: ^2.0.0
   google_maps_flutter: ^2.1.7
   dio:
+  shared_preferences:
+  mime_type:
+  loading_animation_widget:
+  fluttertoast:
+  flutter_overlay_loader:
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.1.0
-  url_launcher: ^6.0.20
+  url_launcher:
   provider: ^6.0.3
 
 dev_dependencies:
